--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,20 +7,35 @@
     <uses-sdk android:minSdkVersion="7" />
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
-            android:name=".AntiStressExerciseActivity" >
+            android:launchMode="singleTask"
+            android:name=".AntiStressExerciseActivity"
+            android:screenOrientation="portrait" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter >
+                <action android:name="com.minimaldevelop.antistress.REMAINDER_SETUP" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
+		<activity
+		    android:name=".Preferences">		    
+		</activity>
         <receiver android:name=".OnAlarmReceiver" >
+        </receiver>
+        <receiver android:name=".OnBootReceiver" >
+            <intent-filter >
+                <action android:name="android.intent.action.BOOT_COMPLETED" >
+                </action>
+            </intent-filter>
         </receiver>
     </application>
 
