--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-		<activity android:name=".Preferences" />
+        <activity android:name=".HelpActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Dialog" />
+        <activity android:name=".Preferences" />
 		<activity android:name="com.google.ads.AdActivity"
               android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
         <receiver android:name=".OnAlarmReceiver" > 
