--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
 	
     <application
         android:icon="@drawable/icon"
-        android:label="@string/app_name" android:debuggable="false">
+        android:label="@string/app_name" android:debuggable="true">
         <activity
             android:label="@string/app_name"
             android:launchMode="singleTask"
