--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,17 +4,21 @@
     android:versionCode="2"
     android:versionName="1.0.1" >
 
-    <uses-sdk android:minSdkVersion="7"/>
+    <uses-sdk android:minSdkVersion="7" />
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="android.permission.INTERNET"/>
-  	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>	
-	
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- Optional but recommended -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
+        android:debuggable="true"
         android:icon="@drawable/icon"
-        android:label="@string/app_name" android:debuggable="true">
+        android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
             android:launchMode="singleTask"
@@ -22,20 +26,27 @@
             android:screenOrientation="portrait" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter >
                 <action android:name="com.minimaldevelop.antistress.REMAINDER_SETUP" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".HelpActivity"
+        <activity
             android:label="@string/app_name"
+            android:name=".HelpActivity"
             android:theme="@android:style/Theme.Dialog" />
         <activity android:name=".Preferences" />
-		<activity android:name="com.google.ads.AdActivity"
-              android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
-        <receiver android:name=".OnAlarmReceiver" > 
+        <activity android:name=".SocializeActivity" 
+            android:screenOrientation="portrait" />
+        <activity
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:name="com.google.ads.AdActivity" />
+
+        <receiver android:name=".OnAlarmReceiver" >
         </receiver>
         <receiver android:name=".OnBootReceiver" >
             <intent-filter >
@@ -43,6 +54,14 @@
                 </action>
             </intent-filter>
         </receiver>
+        <!-- Base Activities Required by Socialize -->
+        <activity android:name="com.socialize.ui.comment.CommentActivity" />
+        <activity android:name="com.socialize.ui.action.ActionDetailActivity" />
+        <activity android:name="com.socialize.ui.profile.ProfileActivity" />
+        <activity android:name="com.socialize.auth.facebook.FacebookActivity" />
+        <activity
+            android:launchMode="singleTop"
+            android:name="com.socialize.ui.SocializeLaunchActivity" />
     </application>
 
 </manifest>
